Shhhhh hear that?  Its another css fix for scrollbars....

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@ body{
     font: arial;
     display: grid;
     margin: 0;
+    overflow-x: hidden;
+    scrollbar-width: thin;
+    scrollbar-color: #ffffffa3 #2b2b2b91;
 }
 
 .home-button-group {
@@ -217,11 +220,12 @@ hr {
     font-size: min(calc(12px + 0.75vw), 24px);
     font-family: Montserrat,Lato,LatoExtended,sans-serif;
     display: inline-flex;    
-    margin-left: 2%;
+    margin-left: 2%;    
     width: 30%;
     height: 65vh;
     overflow-y: scroll;
     overflow-x: hidden;
+    scrollbar-width: thin;
     border-right-style: solid;
 }
 #works-content {
@@ -229,9 +233,12 @@ hr {
     font-family: Montserrat,Lato,LatoExtended,sans-serif;
     display: inline-flex;
     position: absolute;
-    width: 46%;
+    width: 45.5%;
     height: 65vh;
     overflow-y: scroll;  
+    scrollbar-width: thin;
+    padding-right: 6px;
+    margin-right: 2%;
     margin-left: 2%;
 }
 
